--- a/pages/authorization.html
+++ b/pages/authorization.html
@@ -7,5 +7,13 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <a href="pages/authorization.html">Sign In!</a>
+      <a href="pages/registration.html">Sign Up!</a>
+    </header>
+    <div class="wrapper">
+      <footer class="footer"></footer>
+    </div>
+  </body>
 </html>
