finished index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <header class="header">
+      <a class="header__link" href="index.html">Home</a>
       <a class="header__link" href="pages/authorization.html">Sign In!</a>
       <a class="header__link" href="pages/registration.html">Sign Up!</a>
     </header>
@@ -328,82 +329,77 @@
           <input type="submit" value="Submit" class="button" />
         </form>
       </div>
+      <p>Browse the car selection</p>
       <section class="section">
         <div class="carpage">
-          <h3 class="carpage__heading">This car</h3>
+          <h3 class="carpage__heading">15 000 $</h3>
           <div class="carpage-wrap">
             <img src="img/car1.jpg" alt="blackcar" />
           </div>
           <ul>
-            <li>Body Type:</li>
-            <li>Brand:</li>
-            <li>Country:</li>
-            <li>Status:</li>
+            <li><span>Brand:</span> Chevrolet</li>
+            <li><span>Country:</span> France</li>
+            <li><span>Status:</span> New</li>
             <a href="#">Read more about this car...</a>
           </ul>
         </div>
         <div class="carpage">
-          <h3 class="carpage__heading">This car</h3>
+          <h3 class="carpage__heading">10 000 $</h3>
           <div class="carpage-wrap">
             <img src="img/car2.jpg" alt="redcar" />
           </div>
           <ul>
-            <li>Body Type:</li>
-            <li>Brand:</li>
-            <li>Country:</li>
-            <li>Status:</li>
+            <li><span>Brand:</span> Volkswagen</li>
+            <li><span>Country:</span> Germany</li>
+            <li><span>Status:</span> Uncleared</li>
             <a href="#">Read more about this car...</a>
           </ul>
         </div>
         <div class="carpage">
-          <h3 class="carpage__heading">This car</h3>
+          <h3 class="carpage__heading">20 000 $</h3>
           <div class="carpage-wrap">
             <img src="img/car3.jpg" alt="pinkcar" />
           </div>
           <ul>
-            <li>Body Type:</li>
-            <li>Brand:</li>
-            <li>Country:</li>
-            <li>Status:</li>
+            <li><span>Brand:</span> Peugeot</li>
+            <li><span>Country:</span> France</li>
+            <li><span>Status:</span> New</li>
             <a href="#">Read more about this car...</a>
           </ul>
         </div>
         <div class="carpage">
-          <h3 class="carpage__heading">This car</h3>
+          <h3 class="carpage__heading">7 000 $</h3>
           <div class="carpage-wrap">
             <img src="img/car4.jpg" alt="blackcar" />
           </div>
           <ul>
-            <li>Body Type:</li>
-            <li>Brand:</li>
-            <li>Country:</li>
-            <li>Status:</li>
+            <li><span>Brand:</span> Toyota</li>
+            <li><span>Country:</span> Japan</li>
+            <li><span>Status:</span> Used</li>
             <a href="#">Read more about this car...</a>
           </ul>
         </div>
         <div class="carpage">
-          <h3 class="carpage__heading">This car</h3>
+          <h3 class="carpage__heading">13 000 $</h3>
           <div class="carpage-wrap">
             <img src="img/car5.jpg" alt="blackcar" />
           </div>
           <ul>
-            <li>Body Type:</li>
-            <li>Brand:</li>
-            <li>Country:</li>
-            <li>Status:</li>
+            <li><span>Brand:</span> Mercedes</li>
+            <li><span>Country:</span> USA</li>
+            <li><span>Status:</span> On credit</li>
             <a href="#">Read more about this car...</a>
           </ul>
         </div>
         <div class="carpage">
-          <h3 class="carpage__heading">This car</h3>
+          <h3 class="carpage__heading">18 000 $</h3>
           <div class="carpage-wrap">
             <img src="img/car6.jpg" alt="blackcar" />
           </div>
           <ul>
-            <li>Body Type:</li>
-            <li>Brand:</li>
-            <li>Country:</li>
-            <li>Status:</li>
+            <li><span>Brand:</span> BMW</li>
+            <li><span>Country:</span> USA</li>
+            <li><span>Status:</span> New</li>
             <a href="#">Read more about this car...</a>
           </ul>
         </div>
@@ -416,5 +412,6 @@
         icon by <a target="_blank" href="https://icons8.com">Icons8</a>
       </footer>
     </div>
+    <div class="phone"><img src="img/phone.png" alt="phone_button" /></div>
   </body>
 </html>
