--- a/pages/registration.html
+++ b/pages/registration.html
@@ -4,16 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up</title>
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="icon" type="image/x-icon" href="../img/icon.png" />
   </head>
   <body>
     <header class="header">
-      <a href="pages/authorization.html">Sign In!</a>
-      <a href="pages/registration.html">Sign Up!</a>
+      <a class="header__link" href="index.html">Home</a>
+      <a class="header__link" href="pages/authorization.html">Sign In!</a>
+      <a class="header__link" href="pages/registration.html">Sign Up!</a>
     </header>
     <div class="wrapper">
-      <footer class="footer"></footer>
+      <div class="author">
+        <form action="https://fom.in.ua/echo">
+          <label for="username">Your e-mail:</label><br />
+          <input type="text" id="username" name="username" /><br />
+          <label for="pwd">Password:</label><br />
+          <input type="password" id="pwd" name="pwd" />
+          <br />
+          <label for="pwd">Confirm password:</label><br />
+          <input type="password" id="pwd" name="pwd" />
+          <br />
+          <input type="submit" value="Submit" class="button" />
+        </form>
+      </div>
+
+      <footer class="footer">
+        Cat Car Deals -- 2023 <br />
+        <a target="_blank" href="https://icons8.com/icon/A6MPwk5IYkXR/cat"
+          >Cat</a
+        >
+        icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+      </footer>
     </div>
   </body>
 </html>
