fixed the links in authorization.html and registration.html

--- a/pages/authorization.html
+++ b/pages/authorization.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <header class="header">
-      <a class="header__link" href="index.html">Home</a>
-      <a class="header__link" href="pages/authorization.html">Sign In!</a>
-      <a class="header__link" href="pages/registration.html">Sign Up!</a>
+      <a class="header__link" href="../index.html">Home</a>
+      <a class="header__link" href="authorization.html">Sign In!</a>
+      <a class="header__link" href="registration.html">Sign Up!</a>
     </header>
     <div class="wrapper">
       <div class="author">
