--- a/pages/authorization.html
+++ b/pages/authorization.html
@@ -18,13 +18,13 @@
       <div class="author">
         <form action="https://fom.in.ua/echo">
           <label for="username">Username:</label><br />
-          <input type="text" id="username" name="username" /><br />
+          <input type="text" id="username" name="username" required /><br />
           <label for="pwd">Password:</label><br />
-          <input type="password" id="pwd" name="pwd" />
+          <input type="password" id="pwd" name="pwd" required />
           <br />
           <input
             type="checkbox"
-            id="password"
+            id="remember"
             name="remember"
             value="remember" />
           <label for="remember">Remember Me</label><br />
