--- a/pages/registration.html
+++ b/pages/registration.html
@@ -18,12 +18,12 @@
       <div class="author">
         <form action="https://fom.in.ua/echo">
           <label for="username">Your e-mail:</label><br />
-          <input type="text" id="username" name="username" /><br />
+          <input type="text" id="username" name="username" required /><br />
           <label for="pwd">Password:</label><br />
-          <input type="password" id="pwd" name="pwd" />
+          <input type="password" id="pwd" name="pwd" required />
           <br />
-          <label for="pwd">Confirm password:</label><br />
-          <input type="password" id="pwd" name="pwd" />
+          <label for="pwd-confirm">Confirm password:</label><br />
+          <input type="password" id="pwd-confirm" name="pwd-confirm" required />
           <br />
           <input type="submit" value="Submit" class="button" />
         </form>
